Nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Cert-Manager ile SSL için
spec:
  tls:
  - hosts:
    - nginx.ycsuisse.click
    secretName: nginx-tls
  rules:
  - host: nginx.ycsuisse.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
